update links and format

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <button class="btn nav-button first-button" type="button" name="projects-button"><a class="button-link" href=#projects-section >PROJECTS</a></button>
-        <button class="btn nav-button" type="button" name="resume-button"><a class="button-link" href= >RESUME</a></button>
+        <button class="btn nav-button" type="button" name="resume-button"><a class="button-link" href="images/mollibeth-dev.pdf" >RESUME</a></button>
         <button class="btn nav-button" type="button" name="contact-button"><a class="button-link" href=#contact >CONTACT</a></button>
 
       </div>
@@ -98,7 +98,7 @@
       <!-- Horizontal Card - 1st row -->
 
       <div class="card project-card col-md-7">
-        <div class="row horizontal-card ">
+        <div class="row g-0 horizontal-card ">
           <div class="text-column col-sm-4">
             <h3 class="project-title">Tip Calculator</h3>
             <div class="tag-container">
@@ -110,8 +110,6 @@
             <p class="project-info">Calculate the correct tip and total cost of a bill per person using this Tip Calculator.</p>
             <div class="link-container">
               <div class="link-div">
-
-
                 <a href="https://github.com/mollibeth-cardwell/tip-calculator"><i class="project-link fa-brands fa-github"></i></a>
                 <a href="https://mollibeth.dev/tip-calculator"><i class="project-link fa-solid fa-arrow-up-right-from-square"></i></a>
               </div>
@@ -127,7 +125,7 @@
 
       <div class="card project-card vertical-card col-md-4">
         <img src="images/newsletter.png" class="card-img-top" alt="...">
-        <div class="card-body">
+        <div class="card-body vertical-card-div">
           <h3 class="project-title">Newsletter Signup</h3>
           <div class="tag-container">
             <span class="project-tag">Node.js</span>
@@ -149,7 +147,7 @@
 
       <div class="card project-card vertical-card col-md-4">
         <img src="images/interactive-pricing.png" class="card-img-top" alt="...">
-        <div class="card-body">
+        <div class="card-body vertical-card-div">
           <h3 class="project-title">Interactive Pricing</h3>
           <div class="tag-container">
             <span class="project-tag">HTML</span>
@@ -170,7 +168,7 @@
       <!-- Horizontal Card 2nd row -->
 
       <div class="card project-card col-md-7">
-        <div class="row horizontal-card ">
+        <div class="row g-0 horizontal-card ">
           <div class="text-column col-sm-4">
             <h3 class="project-title">Dropdown Navigation and Offcanvas Mobile</h3>
             <div class="tag-container">
@@ -196,7 +194,7 @@
       <!-- Horizontal Card - 3rd row -->
 
       <div class="card project-card col-md-7">
-        <div class="row horizontal-card ">
+        <div class="row g-0 horizontal-card ">
           <div class="text-column col-sm-4">
             <h3 class="project-title">Simon Game</h3>
             <div class="tag-container">
@@ -221,7 +219,7 @@
 
       <div class="card project-card vertical-card col-md-4">
         <img src="images/pregnant-in-cle.png" class="card-img-top" alt="...">
-        <div class="card-body">
+        <div class="card-body vertical-card-div">
           <h3 class="project-title">Pregnant in CLE Website</h3>
           <div class="tag-container">
             <span class="project-tag">HTML</span>
