update github links

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="link-container">
               <div class="link-div">
                 <a href="https://github.com/mollibeth-cardwell/tip-calculator"><i class="project-link fa-brands fa-github"></i></a>
-                <a href="https://mollibeth.dev/tip-calculator"><i class="project-link fa-solid fa-arrow-up-right-from-square"></i></a>
+                <a href="https://mollibeth-cardwell.github.io/tip-calculator/"><i class="project-link fa-solid fa-arrow-up-right-from-square"></i></a>
               </div>
             </div>
           </div>
@@ -159,7 +159,7 @@
           <div class="link-container">
             <div class="link-div">
               <a href="https://github.com/mollibeth-cardwell/interactive-pricing"><i class="project-link fa-brands fa-github"></i></a>
-              <a href="https://mollibeth.dev/interactive-pricing"><i class="project-link fa-solid fa-arrow-up-right-from-square"></i></a>
+              <a href="https://mollibeth-cardwell.github.io/interactive-pricing/"><i class="project-link fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
           </div>
         </div>
@@ -181,7 +181,7 @@
             <div class="link-container">
               <div class="link-div">
                 <a href="https://github.com/mollibeth-cardwell/dropdown-navigation"><i class="project-link fa-brands fa-github"></i></a>
-                <a href="https://mollibeth.dev/dropdown-navigation"><i class="project-link fa-solid fa-arrow-up-right-from-square"></i></a>
+                <a href="https://mollibeth-cardwell.github.io/dropdown-navigation/"><i class="project-link fa-solid fa-arrow-up-right-from-square"></i></a>
               </div>
             </div>
           </div>
@@ -205,7 +205,7 @@
             <div class="link-container">
               <div class="link-div">
                 <a href="https://github.com/mollibeth-cardwell/simon-game"><i class="project-link fa-brands fa-github"></i></a>
-                <a href="https://mollibeth.dev/simon-game"><i class="project-link fa-solid fa-arrow-up-right-from-square"></i></a>
+                <a href="https://mollibeth-cardwell.github.io/simon-game/"><i class="project-link fa-solid fa-arrow-up-right-from-square"></i></a>
               </div>
             </div>
           </div>
@@ -231,7 +231,7 @@
           <div class="link-container">
             <div class="link-div">
               <a href="https://github.com/mollibeth-cardwell/pregnant-in-cle"><i class="project-link fa-brands fa-github"></i></a>
-              <a href="https://mollibeth.dev/pregnant-in-cle"><i class="project-link fa-solid fa-arrow-up-right-from-square"></i></a>
+              <a href="https://mollibeth-cardwell.github.io/pregnant-in-cle/"><i class="project-link fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
           </div>
         </div>
